# ConlangCrafter

./: README.md  pyproject.toml  requirements.txt
configs/: sentences_default.txt
prompts/analysis/: feature_analysis.txt
prompts/grammar/: gram_step2_summary.txt  gram_step3_expand.txt  merge_sections.txt
prompts/lexicon/: lex_step2_expand.txt
prompts/phonology/: phon_step1_checklist.txt  phon_step2_summary.txt  phon_step3_word_shapes.txt
prompts/qa/: qa_amend.txt
prompts/translation/: translation.txt  translation_single.txt
src/: llm_client.py  load_hf_languages.py  pipeline_steps.py  run_pipeline.py
